<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_attendance_status"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_attendance" />
        <item
            android:id="@+id/nav_payment_status"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_payment_status" />

        <item
            android:id="@+id/nav_payment_fees"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_payment_fees" />

        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_notice" />

        <item
            android:id="@+id/nav_faculty_contact"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_faculty_contact" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
